@@ -78,6 +78,7 @@ secure_log_date_format = %b %e
 	hptemp		= n
 	lmsens		= n
 	gensens		= n
+	ipmi		= n
 	nvidia		= n
 	disk		= n
 	fs		= y
@@ -220,6 +221,28 @@ secure_log_date_format = %b %e
 	rigid = 0, 0
 	limit = 100, 100
 </gensens>
+
+
+# IPMI graph
+# -----------------------------------------------------------------------------
+<ipmi>
+	list = Temperatures, Fans, Voltages
+	<desc>
+		0 = CPU Temp, System Temp
+		1 = FAN 1
+		2 = Vcore, 3.3VCC, 12V, VDIMM, 5VCC, CPU VTT, VBAT, VSB, AVCC
+	</desc>
+	<units>
+		0 = degrees C
+		1 = RPM
+		2 = Volts
+	</units>
+	<map>
+	</map>
+	graphs_per_row = 2
+	rigid = 0
+	limit = 100
+</ipmi>
 
 
 # NVIDIA graph
@@ -812,7 +835,7 @@ logo_bottom = logo_bot.png
 	remote	= 300x100
 </graph_size>
 
-graph_name = system, kern, proc, hptemp, lmsens, gensens, nvidia, disk, fs, zfs, du, net, netstat, tc, libvirt, process, serv, mail, port, user, ftp, apache, nginx, lighttpd, mysql, varnish, pagespeed, squid, nfss, nfsc, bind, ntp, chrony, fail2ban, icecast, raspberrypi, phpapc, memcached, apcupsd, nut, wowza, int, verlihub
+graph_name = system, kern, proc, hptemp, lmsens, gensens, ipmi, nvidia, disk, fs, zfs, du, net, netstat, tc, libvirt, process, serv, mail, port, user, ftp, apache, nginx, lighttpd, mysql, varnish, pagespeed, squid, nfss, nfsc, bind, ntp, chrony, fail2ban, icecast, raspberrypi, phpapc, memcached, apcupsd, nut, wowza, int, verlihub
 
 <graph_title>
 	system		= System load average and usage
@@ -821,6 +844,7 @@ graph_name = system, kern, proc, hptemp, lmsens, gensens, nvidia, disk, fs, zfs,
 	hptemp		= HP ProLiant System Health
 	lmsens		= LM-Sensors and GPU temperatures
 	gensens		= Generic sensor statistics
+	ipmi		= IPMI sensor statistics
 	nvidia		= NVIDIA temperatures and usage
 	disk		= Disk drive temperatures and health
 	fs		= Filesystem usage and I/O activity
@@ -880,6 +904,7 @@ graph_name = system, kern, proc, hptemp, lmsens, gensens, nvidia, disk, fs, zfs,
 	_lmsens5	= GPU temperatures
 	_gensens1	= Temperatures
 	_gensens2	= CPU frequency
+	_ipmi		= IPMI sensors
 	_nvidia1	= NVIDIA temperatures
 	_nvidia2	= CPU usage
 	_nvidia3	= Memory usage
